--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
                                 </address>
                                 <div id="phone-fax-email">
                                     <p>
-                                        <strong>Phone:</strong><span>(91) 8974 56984</span><br>
-                                        <strong>Fax:</strong><span>(91) 66 8754 8978</span><br>
-                                        <strong>Email:</strong><span>info@vesco.com</span><br>
+                                        <strong>Phone:</strong> <span>(91) 8974 56984</span><br>
+                                        <strong>Fax:</strong> <span>(91) 66 8754 8978</span><br>
+                                        <strong>Email:</strong> <span>info@vesco.com</span><br>
                                     </p>
                                 </div>
                             </div>
@@ -665,6 +665,44 @@
                                     <a class="btn btn-lg btn-general btn-white" href="#" role="button">Send</a>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div id="footer-copyrights">
+                            <p>Copyrights &copy; 2017 All Rights Reserved by Vesco Inc.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="footer-menu">
+                            <ul>
+                                <li>
+                                    <a href="#home">Home</a>/
+                                </li>
+                                <li>
+                                    <a href="#services">Services</a>/
+                                </li>
+                                <li>
+                                    <a href="#work">Work</a>/
+                                </li>
+                                <li>
+                                    <a href="#team">Team</a>/
+                                </li>
+                                <li>
+                                    <a href="#testimonials">Testimonials</a>/
+                                </li>
+                                <li>
+                                    <a href="#pricing">Pricing</a>/
+                                </li>
+                                <li>
+                                    <a href="#stats">Stats</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
