--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
-
+    <!-- responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
@@ -106,7 +107,7 @@
             </div>
             <div class="container">
                 <div class="row wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-paint-brush fa-3x"></i>
@@ -119,7 +120,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-laptop fa-3x"></i>
@@ -132,7 +133,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-tablet fa-3x"></i>
@@ -145,7 +146,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-search fa-3x"></i>
@@ -158,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-pencil-square-o fa-3x"></i>
@@ -171,7 +172,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-icon">
                                 <i class="fa fa-life-ring fa-3x"></i>
@@ -228,56 +229,56 @@
             </div>
             <div class="container-fluid">
                 <div class="row no-gutters wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/1.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/1.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/2.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/2.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/3.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/3.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/4.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/4.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/5.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/5.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/6.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/6.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/7.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/7.jpg" alt="Work">
                         </a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-4">
                         <div class="img-wrapper">
                             <a href="img/work/8.jpg" title="Work Description Goes Here">
                             <img class="img-responsive" src="img/work/8.jpg" alt="Work">
@@ -574,8 +575,8 @@
                     <div class="content-title-underline"></div>
                 </div>
                 <div class="container">
-                    <div class="row wow animated bounceInLeft" data-wow-dration="1s" data-wow-delay=".5s">
-                        <div class="col-md-3">
+                    <div class="row text-center wow animated bounceInLeft" data-wow-dration="1s" data-wow-delay=".5s">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-cloud-download fa-5x"></i>
                                 <h2>
@@ -585,7 +586,7 @@
                                 <p>Downloads</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-star-o fa-5x"></i>
                                 <h2>
@@ -595,7 +596,7 @@
                                 <p>Awarsd</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-heart-o fa-5x"></i>
                                 <h2>
@@ -605,7 +606,7 @@
                                 <p>Likes</p>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="stats-item">
                                 <i class="fa fa-check fa-5x"></i>
                                 <h2>
@@ -726,12 +727,12 @@
         <div id="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-xs-9">
                         <div id="footer-copyrights">
                             <p>Copyrights &copy; 2017 All Rights Reserved by Vesco Inc.</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 hidden-sm hidden-xs">
                         <div id="footer-menu">
                             <ul>
                                 <li>
